[gd_scene load_steps=4 format=3 uid="uid://b8tt8xurc6hcq"]

[ext_resource type="Script" path="res://Scripts/Bolt.gd" id="1_tmlks"]
[ext_resource type="Texture2D" uid="uid://blmss5my18oda" path="res://Sprites/TerribleBolt.png" id="2_ewbnp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7hwbv"]
size = Vector2(8, 4)

[node name="Bolt" type="Area2D"]
script = ExtResource("1_tmlks")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_7hwbv")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0.5, -1.19209e-07)
scale = Vector2(0.35, 0.2)

[node name="TerribleBolt" type="Sprite2D" parent="."]
rotation = 0.785398
texture = ExtResource("2_ewbnp")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
